fix: adjust subsection spacing

--- a/src/components/annual-report/section1/SectionOne.module.css
+++ b/src/components/annual-report/section1/SectionOne.module.css
@@ -1,5 +1,5 @@
 .subsection {
-    margin-bottom: 36px;
+    margin-bottom: 24px;
 }
 
 .section1Chart {
